# protocol-query

./: .env.example  .gitignore  README.md  pyproject.toml
src/protocol_query/: __init__.py  __main__.py
src/protocol_query/analysis/: __init__.py  comparison.py  llm.py  what_if.py
src/protocol_query/cli/: __init__.py  app.py  compare.py  ingest.py  query.py
src/protocol_query/core/: __init__.py  config.py  database.py
src/protocol_query/embeddings/: __init__.py  local.py
src/protocol_query/output/: __init__.py  formatters.py
src/protocol_query/parsers/: __init__.py  chunker.py  docx_parser.py  pdf_parser.py
src/protocol_query/search/: __init__.py  fts.py  hybrid.py  vector.py
